[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attune-sdk"
version = "0.1.0"
description = "Python SDK for building Attune actions and sensors"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["attune", "automation", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = ["python-json-logger>=3.0", "httpx>=0.27", "attrs>=21.3.0"]

[project.optional-dependencies]
sensor = ["pika>=1.3"]
dev = ["pytest>=7.0", "pytest-cov", "openapi-python-client>=0.28"]

[tool.hatch.build.targets.wheel]
packages = ["src/attune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
