[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "attune-sdk"
dynamic = ["version"]
description = "Python SDK for building Attune actions and sensors"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["attune", "automation", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
authors = [{name = "David Culbreth", email = "david.culbreth.256@gmail.com"}]
dependencies = ["python-json-logger>=3.0", "httpx>=0.27", "attrs>=21.3.0"]

[project.urls]
Homepage = "https://github.com/attune-system/python-attune-sdk"
Repository = "https://github.com/attune-system/python-attune-sdk"
Issues = "https://github.com/attune-system/python-attune-sdk/issues"

[project.optional-dependencies]
sensor = ["pika>=1.3"]
dev = ["pytest>=7.0", "pytest-cov", "openapi-python-client>=0.28"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/attune/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/attune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
